extract_metrics: added support for raw vads and ignoring errors

--- a/nbs/3B. Speech quality metrics extraction.ipynb
+++ b/nbs/3B. Speech quality metrics extraction.ipynb
@@ -45,6 +45,7 @@
     "from os.path import expanduser\n",
     "import itertools\n",
     "from pathlib import Path\n",
+    "import traceback\n",
     "\n",
     "import numpy as np\n",
     "import torch\n",
@@ -87,6 +88,7 @@
     "def prepare_metrics(\n",
     "    input:str,  # audio file webdataset file path\n",
     "    output:str, # output shard path\n",
+    "    kind:str = 'max', # mvad kind\n",
     "    n_samples:int=None, # process a limited amount of samples\n",
     "    \n",
     "):\n",
@@ -101,10 +103,10 @@
     "        import math, time\n",
     "        start = time.time()\n",
     "        ds = wds.WebDataset([utils.derived_name(input, 'mvad')]).decode()\n",
-    "        total = math.ceil(sum([len(x[f'max.spk_emb.npy']) for x in ds]))\n",
+    "        total = math.ceil(sum([len(x[f'{kind}.spk_emb.npy']) for x in ds]))\n",
     "        print(f\"Counting {total} batches: {time.time()-start:.2f}\")\n",
     "    \n",
-    "    ds = vad_merge.chunked_audio_dataset([input], 'max').compose(\n",
+    "    ds = vad_merge.chunked_audio_dataset([input], kind).compose(\n",
     "        wds.to_tuple('__key__', 'rpad', 'gain_shift.npy', 'samples', 'sample_rate'),\n",
     "    )\n",
     "\n",
@@ -118,9 +120,13 @@
     "                snd = (snd - gain_shift[1]) * gain_shift[0]\n",
     "                snd = snd.unsqueeze(0).to(device)\n",
     "\n",
-    "                res = snr_pipeline({\n",
-    "                    \"sample_rate\": sr, \"waveform\": snd\n",
-    "                })\n",
+    "                try:\n",
+    "                    res = snr_pipeline({\n",
+    "                        \"sample_rate\": sr, \"waveform\": snd\n",
+    "                    })\n",
+    "                except:\n",
+    "                    traceback.print_exc()\n",
+    "                    res = dict(snr = np.array([np.nan]), c50 = np.array([np.nan]))\n",
     "\n",
     "            s = {\n",
     "                \"__key__\": keys,\n",
