Use SADelARTransformer for the default model

--- a/nbs/7. Pipeline.ipynb
+++ b/nbs/7. Pipeline.ipynb
@@ -86,6 +86,8 @@
     "                else:\n",
     "                    cls = SADelARTransformer\n",
     "                    args['spec'] = spec\n",
+    "            else:\n",
+    "                cls = SADelARTransformer\n",
     "            self.s2a = cls.load_model(**args)  # use obtained compute device\n",
     "            if optimize: self.s2a.optimize(torch_compile=torch_compile)\n",
     "        except:\n",
