t2s: moved to the new dataset format

--- a/nbs/5B. Multi-lang text to semantic token modeling.ipynb
+++ b/nbs/5B. Multi-lang text to semantic token modeling.ipynb
@@ -149,25 +149,39 @@
    "source": [
     "#| export\n",
     "def load_dataset(\n",
-    "    txt_shard_spec:str,    # transcription webdataset shards\n",
-    "    stoks_shard_dir:str,   # stoks webdataset base dir\n",
-    "    samples:int,           # samples per epoch\n",
-    "    txt_kind:str='small.en-txt',\n",
+    "    dataset_dir:Path,\n",
+    "    stoks_dir:str=None,\n",
+    "    txt_dir:str=None,\n",
     "    vq_codes:int=4096,\n",
-    "    language:str='en',\n",
     "    weight:float=1,\n",
     "    validation:bool=False,\n",
-    "    exclude_files:str=None,\n",
-    "    cwd:Path=None,\n",
+    "    exclude_datasets:str=\"txt-random-valid\",\n",
     "):\n",
     "    import webdataset as wds\n",
-    "    from . import utils\n",
+    "    from whisperspeech import utils, languages\n",
     "\n",
-    "    shards = utils.shard_glob(cwd/txt_shard_spec)\n",
-    "    excludes = {x for file in exclude_files.split() for x in utils.readlines(cwd/file)} if exclude_files else set()\n",
+    "    dataset_dir = Path(dataset_dir)\n",
     "    \n",
+    "    if txt_dir is None:\n",
+    "        for name in ['small.en-txt', 'medium-txt']:\n",
+    "            if (dataset_dir/name).exists():\n",
+    "                txt_dir = name\n",
+    "                break\n",
+    "    assert txt_dir is not None, f\"No transcripts found in {dataset_dir}\"\n",
+    "\n",
+    "    txt_path = dataset_dir/f'{txt_dir}/*.tar.gz'\n",
+    "    shards = utils.shard_glob(txt_path)\n",
+    "    assert len(shards), f\"No data shards found in {txt_path}.\"\n",
+    "\n",
+    "    with open(dataset_dir/'txt-samples.list') as f: samples = len(f.readlines())\n",
+    "    language = utils.readlines(dataset_dir/'language')[0]\n",
     "    language = languages.to_id(language)\n",
     "    \n",
+    "    excludes = {x\n",
+    "                for dir in exclude_datasets.split()\n",
+    "                for x in utils.readlines(dataset_dir/Path(dir)/\"txt-samples.list\")\n",
+    "               } if not validation and exclude_datasets else set()\n",
+    "\n",
     "    def set_language(x):\n",
     "        x['language'] = language\n",
     "        return x\n",
@@ -175,7 +189,7 @@
     "    same_on_all_nodes = lambda urls: urls # will only be used for validation\n",
     "    ds = wds.WebDataset(shards, resampled=not validation, nodesplitter=same_on_all_nodes).compose(\n",
     "        wds.decode(),\n",
-    "        utils.merge_in(utils.derived_dataset('eqvad-stoks', base=txt_kind, suffix='', dir=cwd/stoks_shard_dir)),\n",
+    "        utils.merge_in(utils.derived_dataset(stoks_dir)),\n",
     "        # discard validation samples, select samples > .5s\n",
     "        wds.select(lambda s: s['__key__'] not in excludes and s['stoks.npy'].shape[-1] > 12),\n",
     "        tokenizer('txt', 'ttoks', length=550),\n",
