t2s: do not drop short samples

--- a/nbs/5B. Multi-lang text to semantic token modeling.ipynb
+++ b/nbs/5B. Multi-lang text to semantic token modeling.ipynb
@@ -190,8 +190,7 @@
     "    ds = wds.WebDataset(shards, resampled=not validation, nodesplitter=same_on_all_nodes).compose(\n",
     "        wds.decode(),\n",
     "        utils.merge_in(utils.derived_dataset(stoks_dir)),\n",
-    "        # discard validation samples, select samples > .5s\n",
-    "        wds.select(lambda s: s['__key__'] not in excludes and s['stoks.npy'].shape[-1] > 12),\n",
+    "        wds.select(lambda s: s['__key__'] not in excludes and len(s['stoks.npy']) > 0), # discard validation samples\n",
     "        tokenizer('txt', 'ttoks', length=550),\n",
     "        ar_padder('stoks.npy', 'stoks', length=750, pad_token=vq_codes-1),\n",
     "        ar_padder('ttoks', 'ttoks', length=550, pad_token=CharTokenizer.eot),\n",
