t2s: only shuffle on validation, push data out of dataloaders in bigger batches

--- a/nbs/5B. Multi-lang text to semantic token modeling.ipynb
+++ b/nbs/5B. Multi-lang text to semantic token modeling.ipynb
@@ -197,11 +197,16 @@
     "        char_per_seconder('txt', 'stoks.npy', 'cps', stoks_per_second=25),\n",
     "        wds.map(set_language),\n",
     "        wds.to_tuple('in_ttoks', 'out_ttoks', 'language', 'cps', 'in_stoks', 'out_stoks'),\n",
-    "        wds.shuffle(20000, initial=20000),\n",
-    "        wds.batched(64)\n",
     "    )\n",
     "    if validation:\n",
-    "        ds = ds.slice(samples // 64)\n",
+    "        ds = ds.compose(\n",
+    "            wds.batched(samples)\n",
+    "        ).slice(1)\n",
+    "    else:\n",
+    "        ds = ds.compose(\n",
+    "            wds.shuffle(20000, initial=20000),\n",
+    "            wds.batched(2048)\n",
+    "        )\n",
     "    ds.total_samples = samples\n",
     "    ds.stoks_len = 750\n",
     "    ds.stoks_codes = vq_codes\n",
