t2s: use a separate token for padding, fixes short generations

--- a/nbs/5B. Multi-lang text to semantic token modeling.ipynb
+++ b/nbs/5B. Multi-lang text to semantic token modeling.ipynb
@@ -390,6 +390,7 @@
     "    eot_dropout_p :float = .5\n",
     "    cps_input: bool = True\n",
     "    cps_bins: int = 32\n",
+    "    padding_token_offset: int = 0\n",
     "        \n",
     "    lr0 :float = 1.5e-3\n",
     "    clip_gradient_norm :float = .2\n",
@@ -410,7 +411,15 @@
     "            \n",
     "            self.lr0 = rand(1,5)*1e-3\n",
     "            self.clip_gradient_norm = 10**rand(-3,0)\n",
-    "            self.warmup_steps = 100*(10**rand(1,1.85))"
+    "            self.warmup_steps = 100*(10**rand(1,1.85))\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def upgrade(args):\n",
+    "        args = {k:v for k,v in args.items()}\n",
+    "        def old_default(name, value):\n",
+    "            if name not in args: args[name] = value\n",
+    "        old_default('padding_token_offset', -1)\n",
+    "        return args"
    ]
   },
   {
@@ -614,7 +623,7 @@
     "            local_filename = hf_hub_download(repo_id=repo_id, filename=filename)\n",
     "        if spec is None:\n",
     "            spec = torch.load(local_filename, map_location=device)\n",
-    "        model = cls(**spec['config'], tunables=Tunables(**spec['tunables']))\n",
+    "        model = cls(**spec['config'], tunables=Tunables(**Tunables.upgrade(spec['tunables'])))\n",
     "        model.load_state_dict(spec['state_dict'])\n",
     "        model.eval().to(device)\n",
     "        return model\n",
@@ -720,7 +729,7 @@
     "            langs = F.pad(langs, (1, self.ttoks_len - len(langs) - 1), value=languages.to_id(lang0)).unsqueeze(0)\n",
     "\n",
     "        toks = torch.zeros((bs,N), dtype=torch.long, device=dev)\n",
-    "        toks[:,0] = self.stoks_codes-1\n",
+    "        toks[:,0] = self.stoks_codes + self.tunables.padding_token_offset\n",
     "        start = 0\n",
     "        if stoks_prompt is not None:\n",
     "            toks[:,1:len(stoks_prompt)+1] = stoks_prompt\n",
@@ -739,7 +748,7 @@
     "        with inference.inference_context():\n",
     "            for i in it:\n",
     "                toks[:,i+1] = self.generate_next(toks[:,i:i+1], toks_positions[i:i+1], cps_emb, xenc, xenc_positions, T, top_k)[:,0]\n",
-    "                if i % 25 == 0 and (toks[:,i+1] == self.stoks_codes-1).all(): return toks[:,1:i+1]\n",
+    "                if i % 25 == 0 and (toks[:,i+1] == self.stoks_codes+self.tunables.padding_token_offset).all(): return toks[:,1:i+1]\n",
     "\n",
     "                # for profiling, debugging or early exit\n",
     "                if step is not None: step()\n",
