train_multi: forget epochs, iterations ftw

--- a/nbs/5B. Multi-lang text to semantic token modeling.ipynb
+++ b/nbs/5B. Multi-lang text to semantic token modeling.ipynb
@@ -804,7 +804,7 @@
     "        return TSARTransformer(depth=24, n_head=16, **kwargs)\n",
     "\n",
     "def make_model(size:str, frozen_embeddings_model:str=None, tunables:Tunables=Tunables(), dataset:torch.utils.data.Dataset=None):\n",
-    "    from . import vq_stoks\n",
+    "    from whisperspeech import vq_stoks\n",
     "\n",
     "    if frozen_embeddings_model:\n",
     "        vqmodel = vq_stoks.RQBottleneckTransformer.load_model(frozen_embeddings_model)\n",
