--- a/nbs/B2. Training (Lightning).ipynb
+++ b/nbs/B2. Training (Lightning).ipynb
@@ -119,10 +119,10 @@
     "            return num_steps\n",
     "        \n",
     "        warmup_steps = self.model_hparams['warmup_steps']\n",
-    "        total_steps = self.model_hparams['epochs'] * num_steps_per_epoch()\n",
+    "        total_steps = self.model_hparams['iterations']\n",
     "        self.model_hparams['pct_start'] = min(0.3, warmup_steps / total_steps)\n",
     "\n",
-    "        print(f\"{self.model_hparams['epochs']=} epochs x {num_steps_per_epoch()=} steps\")\n",
+    "        print(f\"{self.model_hparams['iterations']=} steps\")\n",
     "\n",
     "        if self.model_hparams['lr_schedule'] == 'cosine':\n",
     "            lr_scheduler = torch.optim.lr_scheduler.OneCycleLR(\n",
@@ -130,7 +130,7 @@
     "                pct_start=self.model_hparams['pct_start'],\n",
     "                max_lr=[pg.get('lr', lr) for pg in param_groups],\n",
     "                steps_per_epoch=num_steps_per_epoch(),\n",
-    "                epochs=int(self.model_hparams['epochs']),\n",
+    "                epochs=1,\n",
     "                final_div_factor=25\n",
     "            )\n",
     "        elif self.model_hparams['lr_schedule'] == 'linear':\n",
@@ -366,7 +366,7 @@
     "parser.add_argument('--validation-data', action='append', type=str, default=[], help='validation dataset (can be passed multiple times)')\n",
     "parser.add_argument('--monitored-metric', type=str, default=\"val_loss\", help='metric to monitor for checkpointing')\n",
     "parser.add_argument(\"--checkpoint-dir\", type=str, default=\"./checkpoints/\", help=\"directory to save the checkpoints\")\n",
-    "parser.add_argument('--epochs', type=int, default=10, help='total training epochs')\n",
+    "parser.add_argument('--iterations', type=int, default=8000, help='total training iterations')\n",
     "parser.add_argument('--validate-every-n-steps', type=int, default=500, help='how training steps to run between validations')\n",
     "parser.add_argument('--weight-decay', type=float, default=1e-2, help='optimizer weight decay')\n",
     "parser.add_argument('--lr0', type=float, default=1e-4, help='optimizer initial learning rate')\n",
@@ -393,7 +393,7 @@
     "checkpoint_dir: str = args.pop(\"checkpoint_dir\")\n",
     "num_workers: int = args.pop(\"workers\")\n",
     "batch_size: int = args.pop(\"batch_size\")\n",
-    "epochs: int = args.pop(\"epochs\")\n",
+    "iterations: int = args.pop(\"iterations\")\n",
     "tunables_args: list = shlex.split(args.pop(\"tunables\"))\n",
     "\n",
     "hyp_params = {}\n",
@@ -407,7 +407,7 @@
     "hyp_params['torch_compile'] = args['torch_compile']\n",
     "hyp_params['lr0'] = args['lr0']\n",
     "hyp_params['lr_schedule'] = args['lr_schedule']\n",
-    "hyp_params['epochs'] = epochs\n",
+    "hyp_params['iterations'] = iterations\n",
     "hyp_params['strategy'] = args['strategy']\n",
     "if 'SLURM_NTASKS' in os.environ:\n",
     "    hyp_params['world_size'] = os.environ['SLURM_NTASKS']\n",
@@ -472,7 +472,7 @@
     "\n",
     "ckpt_callback = pl.callbacks.ModelCheckpoint(\n",
     "     dirpath=f'{task_name}',\n",
-    "     filename=f'{task_name}-{name}'+\"-{epoch}-{step}-acc={\"+monitored_metric+\":.2f}\",\n",
+    "     filename=f'{task_name}-{name}'+\"-{step}-acc={\"+monitored_metric+\":.2f}\",\n",
     "     monitor=monitored_metric,\n",
     "     save_top_k=16,\n",
     "     train_time_interval=datetime.timedelta(minutes=14),\n",
@@ -534,7 +534,7 @@
     "task = TrainingTask(model, model_hparams=hyp_params)\n",
     "\n",
     "trainer = pl.Trainer(strategy=hyp_params['strategy'],\n",
-    "                  max_epochs=hyp_params['epochs'],\n",
+    "                  max_steps=hyp_params['iterations'],\n",
     "                  accelerator=\"gpu\",\n",
     "                  profiler=\"simple\",\n",
     "                  precision=hyp_params['precision'],\n",
