train_multi: compute dataset weights based on log2 of sample counts

--- a/nbs/B2. Training (Lightning).ipynb
+++ b/nbs/B2. Training (Lightning).ipynb
@@ -175,6 +175,10 @@
     "            self.log_dict({f'metrics/{k}_{name}':v for k,v in self.model.get_metrics().items()}, sync_dist=True, add_dataloader_idx=False)\n",
     "        return val_loss.detach()\n",
     "    \n",
+    "    def on_validation_epoch_end(self):\n",
+    "        for name, weight in zip(train_dss_names, train_weights):\n",
+    "            self.log(f\"trainer/{name}-batches\", weight.to(self.device) * self.global_step, sync_dist=True)\n",
+    "    \n",
     "    def test_step(self, val_batch, batch_idx):\n",
     "        test_out = self.model.forward(*val_batch)\n",
     "        test_loss = test_out[-1]\n",
@@ -487,11 +491,19 @@
     "train_dss = [parse_and_call(f'train_ds_{i}', task.load_dataset,\n",
     "                            parse_dataset_string(train_ds_config) + dataset_config)\n",
     "             for i,train_ds_config in enumerate(args['training_data'])]\n",
-    "train_total_samples = int(min(ds.total_samples for ds in train_dss) * len(train_dss) * 7)\n",
-    "train_total_batches = int(train_total_samples / batch_size / int(hyp_params['world_size']))\n",
+    "train_dss_names = simplify_folder_names([parse_dataset_string(train_ds_config)[0] for train_ds_config in args['training_data']])\n",
+    "print('train names:', train_dss_names)\n",
+    "counts = [x.total_samples for x in train_dss]\n",
+    "print(counts)\n",
+    "print(torch.tensor(counts).log2())\n",
+    "train_weights = torch.tensor(counts).log2() - torch.tensor(counts).log2().min() + 1\n",
+    "for tds, w in zip(train_dss, train_weights):\n",
+    "    tds.weight = w\n",
+    "\n",
+    "train_total_batches = hyp_params['iterations']\n",
     "if train_total_batches < hyp_params['validate_every_n_steps']:\n",
     "    # validate once at the end of every epoch for very short experiments\n",
-    "    hyp_params['validate_every_n_steps'] = train_total_batches * 2\n",
+    "    hyp_params['validate_every_n_steps'] = train_total_batches\n",
     "\n",
     "# persistent_workers=True is critical here so we don't reset the sample shuffling buffers\n",
     "# with webdatasets sample shuffling is very bad initially, unless num_workers << num_shards\n",
