train_multi: use trainer.init_module to avoid multiple model initializations

--- a/nbs/B2. Training (Lightning).ipynb
+++ b/nbs/B2. Training (Lightning).ipynb
@@ -536,15 +536,6 @@
     "    if type(wandb_logger.experiment.config) == wandb.sdk.wandb_config.Config:\n",
     "        wandb_logger.experiment.config['tunables'] = dataclasses.asdict(tunables)\n",
     "\n",
-    "if args['load_from']:\n",
-    "    model = task.load_model(str(args['load_from']))\n",
-    "else:\n",
-    "    model_kwargs = dict(dataset=train_dss[0])\n",
-    "    if tunables is not None: model_kwargs['tunables'] = tunables\n",
-    "    model = parse_and_call('model', task.make_model, task_args, model_kwargs)\n",
-    "    \n",
-    "task = TrainingTask(model, model_hparams=hyp_params)\n",
-    "\n",
     "trainer = pl.Trainer(strategy=hyp_params['strategy'],\n",
     "                  max_steps=hyp_params['iterations'],\n",
     "                  accelerator=\"gpu\",\n",
@@ -559,6 +550,15 @@
     "                  num_nodes=int(os.environ.get('SLURM_NNODES', 1)),\n",
     "                  devices=int(os.environ.get('SLURM_NTASKS_PER_NODE', 1)),\n",
     "                  callbacks=[ckpt_callback, lr_monitor_callback])\n",
+    "        \n",
+    "# we initialize everything manually anyways\n",
+    "with trainer.init_module(empty_init=True):\n",
+    "    if args['load_from']:\n",
+    "        model = task.load_model(str(args['load_from']))\n",
+    "    else:\n",
+    "        model_kwargs = dict(dataset=train_dss[0])\n",
+    "        if tunables is not None: model_kwargs['tunables'] = tunables\n",
+    "        model = parse_and_call('model', task.make_model, task_args, model_kwargs)\n",
     "\n",
     "if type(wandb_logger.experiment.config) == wandb.sdk.wandb_config.Config:\n",
     "    wandb_logger.experiment.config.update(hyp_params)\n",
@@ -566,7 +566,10 @@
     "kwargs = {}\n",
     "if 'resume_from' in args:\n",
     "    kwargs['ckpt_path'] = args['resume_from']\n",
-    "trainer.fit(model=task, train_dataloaders=train_loader, val_dataloaders=val_loaders, **kwargs)\n",
+    "trainer.fit(model=TrainingTask(model, model_hparams=hyp_params),\n",
+    "            train_dataloaders=train_loader,\n",
+    "            val_dataloaders=val_loaders,\n",
+    "            **kwargs)\n",
     "\n",
     "if rank_zero_only.rank == 0:\n",
     "    Path(task_name).mkdir(exist_ok=True, parents=True)\n",
