vad_merge: fixed the edgecase of the last file in a shard having no speech

--- a/nbs/1C. VAD merging.ipynb
+++ b/nbs/1C. VAD merging.ipynb
@@ -111,7 +111,6 @@
     "# we need to split first to merge in the spk_emb.npy data\n",
     "# this is similar to utils.split_to_chunks but works without the audio data\n",
     "def split(stream, ikey='vad.npy', copy_keys=[], split_keys=[]):\n",
-    "    empty = []\n",
     "    for s in stream:\n",
     "        imax = len(s[ikey]) - 1\n",
     "        if len(s[ikey]) == 0:\n",
@@ -121,22 +120,21 @@
     "            # splitted data.\n",
     "            new = {\"__key__\": s['__key__'] + \"_none\",\n",
     "                   \"src_key\": s['__key__'],\n",
-    "                   \"__url__\": s['__url__']}\n",
+    "                   \"__url__\": s['__url__'],\n",
+    "                   \"__skip_merge__\": True}\n",
     "            for k in copy_keys:  new[k] = np.array([])\n",
     "            for k in split_keys: new[k] = np.array([])\n",
     "            new[ikey] = s[ikey]\n",
-    "            empty.append(new)\n",
+    "            yield new\n",
     "        for i,(ts,te) in enumerate(s[ikey]):\n",
     "            new = {\"__key__\": s['__key__'] + f\"_{i:03d}\",\n",
     "                   \"src_key\": s['__key__'],\n",
     "                   \"__url__\": s['__url__'],\n",
-    "                   \"i\": i, \"imax\": imax,\n",
-    "                   \"empty\": empty}\n",
+    "                   \"i\": i, \"imax\": imax}\n",
     "            for k in copy_keys:  new[k] = s[k]\n",
     "            for k in split_keys: new[k] = s[k][i]\n",
     "            new[ikey] = s[ikey][i]\n",
     "            yield new\n",
-    "            empty = []\n",
     "\n",
     "def merge_by_src_key(stream, copy_keys=[], merge_keys=['vad.npy']):\n",
     "    def make_record(src):\n",
@@ -157,13 +155,11 @@
     "            if ms and s['src_key'] != ms['__key__']:\n",
     "                yield finish_record(ms)\n",
     "                ms = None\n",
-    "            # push all empty files we might have lost\n",
-    "            for vs in s.get(\"empty\", []):\n",
-    "                yield finish_record(make_record(vs))\n",
     "            # prepare a merged record for the new data\n",
     "            if ms is None:\n",
     "                ms = make_record(s)\n",
-    "            for k in merge_keys: ms[k].append(s[k])\n",
+    "            for k in merge_keys:\n",
+    "                if k in s: ms[k].append(s[k])\n",
     "        except:\n",
     "            print(f\"Error processing {s['__key__']}:\")\n",
     "            print(s)\n",
@@ -250,7 +246,7 @@
     "    def _merger(stream):\n",
     "        for s in stream:\n",
     "            segments, speakers = s['vad.npy'], s['spk_emb.npy']\n",
-    "            if len(segments) == 0:\n",
+    "            if segments.size == 0:\n",
     "                s[prefix+'.vad.npy'], s[prefix+'.spk_emb.npy'] = np.array([]), np.array([])\n",
     "                s[prefix+'.subvads.pyd'] = []\n",
     "                yield s\n",
@@ -388,7 +384,7 @@
     "            for k in ['vad.npy', 'spk_emb.npy', 'powers.npy']:\n",
     "                s[k] = s[k][1:-1]\n",
     "\n",
-    "        if len(s['vad.npy']) > 0:\n",
+    "        if s['vad.npy'].size > 0:\n",
     "            lengths = s['vad.npy'][:,1] - s['vad.npy'][:,0]\n",
     "            mask = (lengths < 1) & (s['powers.npy'] < -6)\n",
     "            for k in ['vad.npy', 'spk_emb.npy', 'powers.npy']:\n",
@@ -547,8 +543,8 @@
     "                          resampled=False, nodesplitter=wds.shardlists.single_node_only):\n",
     "    return wds.WebDataset(shards, resampled=resampled, nodesplitter=nodesplitter).compose(\n",
     "        wds.decode(utils.torch_audio_opus),\n",
-    "        utils.merge_in(utils.derived_dataset('mvad')),\n",
     "        utils.find_audio,\n",
+    "        utils.merge_in(utils.derived_dataset('mvad')),\n",
     "        find_vad_kind(kind),\n",
     "        lambda x: utils.split_to_chunks(x, copy_keys=copy_keys, split_keys=split_keys),\n",
     "    )"
