--- a/nbs/D. Common dataset utilities.ipynb
+++ b/nbs/D. Common dataset utilities.ipynb
@@ -343,17 +343,18 @@
     "                # this will open a new file when we get the first sample with a new __url__\n",
     "                merged_samples = iter(dataset_fun(url))\n",
     "                cur_url = url\n",
-    "            try:\n",
-    "                merge_s = next(merged_samples)\n",
-    "            except StopIteration:\n",
-    "                # if the original shard got repeated we won't observe a __url__ change\n",
-    "                # in this case restart the dataset from the beginning\n",
-    "                merged_samples = iter(dataset_fun(url))\n",
-    "                merge_s = next(merged_samples)\n",
-    "            assert merge_s['__key__'] == s['__key__'], f\"sample keys don't match: {merge_s['__key__']}, {s['__key__']} in file {s['__url__']}\"\n",
     "            news = {}\n",
-    "            news.update(merge_s)\n",
     "            news.update(s)\n",
+    "            if '__skip_merge__' not in s:\n",
+    "                try:\n",
+    "                    merge_s = next(merged_samples)\n",
+    "                except StopIteration:\n",
+    "                    # if the original shard got repeated we won't observe a __url__ change\n",
+    "                    # in this case restart the dataset from the beginning\n",
+    "                    merged_samples = iter(dataset_fun(url))\n",
+    "                    merge_s = next(merged_samples)\n",
+    "                assert merge_s['__key__'] == s['__key__'], f\"sample keys don't match: {merge_s['__key__']}, {s['__key__']} in file {s['__url__']}\"\n",
+    "                news.update(merge_s)\n",
     "            yield news\n",
     "    return merge_loop"
    ]
@@ -512,8 +513,8 @@
     "def vad_dataset(shards, ikey='vad.npy', kind='vad'):\n",
     "    return wds.WebDataset(shards).compose(\n",
     "        wds.decode(torch_audio_opus),\n",
-    "        merge_in(derived_dataset(kind)),\n",
     "        find_audio,\n",
+    "        merge_in(derived_dataset(kind)),\n",
     "        lambda x: split_to_chunks(x, ikey=ikey),\n",
     "    )"
    ]
