inference: fix the missing hf_hub_download

--- a/nbs/D. Common inference utilities.ipynb
+++ b/nbs/D. Common inference utilities.ipynb
@@ -20,6 +20,7 @@
     "#| export\n",
     "import torch\n",
     "import torch.nn.functional as F\n",
+    "from huggingface_hub import hf_hub_download\n",
     "\n",
     "from contextlib import nullcontext"
    ]
