t2s: clean up the conditining tensor dimentions

--- a/nbs/5B. Multi-lang text to semantic token modeling.ipynb
+++ b/nbs/5B. Multi-lang text to semantic token modeling.ipynb
@@ -571,7 +571,7 @@
     "\n",
     "        cps_bin = (cpss / 20 * self.tunables.cps_bins).to(torch.long)\n",
     "        cps_bin[cps_bin >= self.tunables.cps_bins] = self.tunables.cps_bins-1\n",
-    "        return self.cps_embeddings(cps_bin)\n",
+    "        return self.cps_embeddings(cps_bin).unsqueeze(1)\n",
     "\n",
     "    def run_encoder(self, in_ttoks, languages, cpss):\n",
     "        if len(languages.shape) != 3: lang_embs = self.lang_embeddings(languages)\n",
@@ -719,14 +719,14 @@
     "        else:\n",
     "            lang0 = lang\n",
     "            ttoks = self.tokenizer.encode(txt)\n",
-    "            langs = torch.tensor([languages.to_id(lang)], device=dev).unsqueeze(0)\n",
+    "            langs = torch.tensor([languages.to_id(lang)], device=dev)\n",
     "        ttoks = torch.tensor(ttoks, device=dev)\n",
-    "        ttoks = F.pad(ttoks, (1, self.ttoks_len - len(ttoks) - 1), value=self.tokenizer.eot).unsqueeze(0)\n",
+    "        ttoks = F.pad(ttoks, (1, self.ttoks_len - len(ttoks) - 1), value=self.tokenizer.eot)\n",
     "        cpss = torch.tensor([cps], device=dev)\n",
     "        T = torch.tensor(T, device=dev)\n",
     "        if not isinstance(langs, torch.Tensor):\n",
     "            langs = torch.tensor(langs, device=dev)\n",
-    "            langs = F.pad(langs, (1, self.ttoks_len - len(langs) - 1), value=languages.to_id(lang0)).unsqueeze(0)\n",
+    "            langs = F.pad(langs, (1, self.ttoks_len - len(langs) - 1), value=languages.to_id(lang0))\n",
     "\n",
     "        toks = torch.zeros((bs,N), dtype=torch.long, device=dev)\n",
     "        toks[:,0] = self.stoks_codes + self.tunables.padding_token_offset\n",
@@ -739,7 +739,8 @@
     "\n",
     "        toks_positions = torch.arange(N, device=dev)\n",
     "        with record_function(\"encode\"):\n",
-    "            ttoks, langs, cpss = [x.repeat(bs, 1) for x in (ttoks, langs, cpss)]\n",
+    "            ttoks = ttoks.repeat(bs, 1)\n",
+    "            langs, cpss = [x.repeat(bs) for x in (langs, cpss)]\n",
     "            xenc, xenc_positions, cps_emb = self.run_encoder(ttoks, langs, cpss)\n",
     "            toks_positions = torch.arange(N+1, device=dev)\n",
     "        \n",
