t2s: don't let any padding tokens out of the t2s generate function

--- a/nbs/5B. Multi-lang text to semantic token modeling.ipynb
+++ b/nbs/5B. Multi-lang text to semantic token modeling.ipynb
@@ -749,7 +749,7 @@
     "        with inference.inference_context():\n",
     "            for i in it:\n",
     "                toks[:,i+1] = self.generate_next(toks[:,i:i+1], toks_positions[i:i+1], cps_emb, xenc, xenc_positions, T, top_k)[:,0]\n",
-    "                if i % 25 == 0 and (toks[:,i+1] == self.stoks_codes+self.tunables.padding_token_offset).all(): return toks[:,1:i+1]\n",
+    "                if (toks[:,i+1] == self.stoks_codes+self.tunables.padding_token_offset).all(): return toks[:,1:i+1]\n",
     "\n",
     "                # for profiling, debugging or early exit\n",
     "                if step is not None: step()\n",
