Make spk_emb extraction compatible with speechbrain 1.0.0

--- a/nbs/2A. Speaker Embeddings.ipynb
+++ b/nbs/2A. Speaker Embeddings.ipynb
@@ -72,7 +72,11 @@
     "\n",
     "from whisperspeech import vad, utils\n",
     "\n",
-    "from speechbrain.pretrained import EncoderClassifier\n",
+    "try:\n",
+    "    # 0.5.16\n",
+    "    from speechbrain.pretrained import EncoderClassifier\n",
+    "except: # 1.0.0\n",
+    "    from speechbrain.inference.classifiers import EncoderClassifier\n",
     "from whisperspeech.inference import get_compute_device"
    ]
   },
